# libOpenDRIVE

./: .clang-format  .gitignore  .gitmodules  .hgignore  CMakeLists.txt  CubicBezier.hpp  Embind.cpp  Geometries.cpp  Geometries.h  Junction.h  LaneSection.cpp  LaneSection.h  Lanes.cpp  Lanes.h  Makefile  Math.hpp  Mesh.cpp  Mesh.h  OpenDriveConfig.cmake.in  OpenDriveMap.cpp  OpenDriveMap.h  README.md  RefLine.cpp  RefLine.h  Road.cpp  Road.h  RoadMark.cpp  RoadMark.h  RoadNetworkMesh.cpp  RoadNetworkMesh.h  RoadObject.cpp  RoadObject.h  RoutingGraph.cpp  RoutingGraph.h  Utils.cpp  Utils.h  Utils.hpp  XmlNode.h  create_compile_commands.sh  format-files.sh  (+4 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
Geometries/: Arc.cpp  Arc.h  CubicSpline.cpp  CubicSpline.h  Geometries.cpp  Geometries.h  Line.cpp  Line.h  ParamPoly3.cpp  ParamPoly3.h  RoadGeometry.cpp  RoadGeometry.h  Spiral.cpp  Spiral.h
Geometries/Spiral/: odrSpiral.cpp
Viewer/: RoadNetworkMesh.cpp  RoadNetworkMesh.h  ViewerUtils.cpp  ViewerUtils.h  controls.js  index.html  main.js
Viewer/lib/: orbitcontrols.min.js
Visualizer/: controls.js  index.html  main.js  utils.js  worker.js
WASM/: OpenDriveMapWASM.h
bindings/: bindings.cpp  bindings.h  junction.cpp  lane.cpp  lanesection.cpp  lanevalidityrecord.cpp  math.cpp  mesh.cpp  opendrivemap.cpp  refline.cpp  road.cpp  roadmark.cpp  roadnetworkmesh.cpp  roadobject.cpp  roadsignal.cpp  routinggraph.cpp  xml_node.cpp
include/: CubicBezier.hpp  Fmt.hpp  Junction.h  Lane.h  LaneSection.h  LaneValidityRecord.h  Log.h  Log.hpp  Math.hpp  Mesh.h  OpenDriveMap.h  RefLine.h  Road.h  RoadMark.h  RoadNetworkMesh.h  RoadObject.h  RoadSignal.h  RoutingGraph.h  Signal.h  Utils.hpp  XmlNode.h  earcut.hpp
include/Geometries/: Arc.h  CubicSpline.h  Geometries.h  Line.h  ParamPoly3.h  RoadGeometry.h  Spiral.h
include/Geometries/Spiral/: odrSpiral.h
src/: Embind.cpp  Junction.cpp  Lane.cpp  LaneSection.cpp  Log.cpp  Mesh.cpp  OpenDriveMap.cpp  RefLine.cpp  Road.cpp  RoadMark.cpp  RoadNetworkMesh.cpp  RoadObject.cpp  RoadSignal.cpp  RoutingGraph.cpp  Signal.cpp  test.cpp
src/Geometries/: Arc.cpp  CubicSpline.cpp  Line.cpp  ParamPoly3.cpp  RoadGeometry.cpp  Spiral.cpp
src/Geometries/Spiral/: odrSpiral.cpp
tests/: test.cpp  test.xodr  test_binding.py  test_opendrivemap.py
