[project]
name = "opendrive"
version = "0.0.1"
description = "Python bindings for libOpenDRIVE"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  {name = "Christian Contreras", email = "chrisjcc.physics@gmail.com"}
]
urls = { "Homepage" = "https://github.com/pageldev/libOpenDRIVE" }
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=64", "pybind11>=2.9"]
build-backend = "setuptools.build_meta"
